--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -8,7 +8,7 @@
     (onClick)="toggleSideMenu()"
   /> -->
   <div class="flex w-full justify-content-between align-items-center m-4">
-    <div class="flex" style="color: white">Maps</div>
+    <div class="flex" style="color: white">MAPS Clone</div>
     <div class="flex">
       <p-avatar
         icon="pi pi-user"
